--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,12 @@
     "store"
   ],
   "author": "Ravi <ravifelipee@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "pg": "^8.13.1",
+    "sequelize": "^6.37.5"
+  }
 }
