--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "description": "This system is an online book store where users can advertise books they want to sell, so that other users of the platform can buy them. It connects sellers and buyers of new and used books to do business with each other.",
   "main": "app.js",
   "scripts": {
+    "start": "",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -16,9 +18,15 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "bookfy_project_backend": "file:",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9",
+    "sequelize-cli": "^6.6.2"
   }
 }
