--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "This system is an online book store where users can advertise books they want to sell, so that other users of the platform can buy them. It connects sellers and buyers of new and used books to do business with each other.",
   "main": "app.js",
   "scripts": {
-    "start": "",
+    "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
