--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "bookfy_project_backend": "file:",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "moment": "^2.30.1",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5"
